# FABTemplateGenerator

./: CMakeLists.txt  README.md  config.json  generation.cpp  generation.h  main.cpp
.github/workflows/: cmake.yml
containers/: cardpositiondata.cpp  cardpositiondata.h  config.cpp  config.h  image.cpp  image.h  inputdata.cpp  inputdata.h  inputdatacontainer.cpp  inputdatacontainer.h  templatecontainer.cpp  templatecontainer.h
image-manipulation/: augmentation.cpp  augmentation.h  imageoverlay.cpp  imageoverlay.h
image-manipulation/augmentation/: augmentation.h  bilateralbluraugmentation.cpp  bilateralbluraugmentation.h  brightnessadjustionaugmentation.cpp  brightnessadjustionaugmentation.h  cutoutaugmentation.cpp  cutoutaugmentation.h  imageflipaugmentation.cpp  imageflipaugmentation.h  lensbluraugmentation.cpp  lensbluraugmentation.h  noiseaugmentation.cpp  noiseaugmentation.h  rgbshiftaugmentation.cpp  rgbshiftaugmentation.h
tests/containers/: test-cardpositiondata.cpp  test-config.cpp  test-image.cpp  test-inputdata.cpp  test-inputdatacontainer.cpp  test-templatecontainer.cpp
tests/image-manipulation/: test-imageoverlay.cpp
tests/image-manipulation/augmentation/: test-augmentation.cpp
utils/: augmentationfactory.cpp  augmentationfactory.h  configreader.cpp  configreader.h  random.cpp  random.h  zlibcustomimageextractor.cpp  zlibcustomimageextractor.h
utils/exceptions/: badusageexception.cpp  badusageexception.h  dividebyzero.cpp  dividebyzero.h  filenotfound.cpp  filenotfound.h  invalidtemplateexception.cpp  invalidtemplateexception.h  invalidvalueexception.cpp  invalidvalueexception.h  libraryexception.cpp  libraryexception.h  novalidinputsleftexception.cpp  novalidinputsleftexception.h  pathnotfoundexception.cpp  pathnotfoundexception.h
